--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "swiper": "^6.8.1"
   },
   "devDependencies": {
