--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@iconscout/react-unicons-thinline": "0.0.1",
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
+    "axios": "^0.21.1",
     "ityped": "1.0.3",
     "node-sass": "6.0.0",
     "react": "17.0.2",
