--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
     "axios": "^0.21.1",
+    "emailjs-com": "^3.2.0",
     "ityped": "1.0.3",
     "node-sass": "6.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.14.1",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "swiper": "^6.8.1"
