Updated package.json file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "new-portfolio",
+  "homepage": "https://atuprosper.com",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
